# tonuino-importer

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: docker-build.yml
.opencode/plans/: tonuino-importer.md
app/: config.py  importer.py  main.py  overview.py  render.py  rsync.py  scanner.py
app/routers/: dashboard.py  import_.py  sd.py
examples/TonUINO-Affenbox/: platformio.ini
examples/TonUINO-Affenbox/Affenbox/: Affenbox.h  Affenbox.ino  Configuration.h  ToDo.txt
examples/TonUINO-Affenbox/Wiki/Tonuino/: Configuration.h  Emulated_EEPROM.h  Tonuino.ino
examples/TonUINO-Affenbox/Wiki/Tonuino/Examples_Configuration/AiO_ThreeButtons_RotaryEncoder/: Configuration.h
examples/TonUINO-Affenbox/doc/: SimpleIRCommands.txt  soundfiles.txt
scripts/: cleanup-eadir.sh  restructure-hoerspiele.sh
static/css/: style.css
templates/: base.html  dashboard.html  import.html  sd.html  sd_detail.html
templates/automation-themes/templates/: _components.html  base.html
templates/partials/: browser.html  preview.html
