[project]
name = "tonuino-importer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "natsort>=8.0",
]

[project.scripts]
tonuino-importer = "app.main:app"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
